--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -14,16 +14,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/task_name_view"
-            android:text="Teste"/>
-
-        <TextView
-            android:text="Teste 2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:id="@+id/task_name_view"/>
 
     </LinearLayout>
     <CheckBox
+        android:id="@+id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
